# alg

./: BUILD.sh  CMakeLists.txt  README.md
Tests/: AShtepinTests.cpp  BLS_parallel.cpp  BLS_parallel.ini  BLS_pso.cpp  BLS_pso.ini  BLS_selector.cpp  BLS_selector.ini  Base64Test.cpp  CMakeLists.txt  Cumberland_Test.cpp  Cumberland_Test.ini  Currenex_Test.cpp  Currenex_Test.ini  FORTS_Test.cpp  HotSpot_Test.cpp  HotSpot_Test.ini  IncludesTest.sh  KrakenSpot_Test.cpp  LMAX_Test.cpp  LMAX_Test.ini  MICEX_Test.cpp  MICEX_Test.ini  MisAligned.cpp  SeqNumTests.cpp  SpecialFPValsTest.cpp  TDAmeritrade_Test.cpp  TDAmeritrade_Test.ini  TT_Test.cpp  TT_Test.ini  TestEmail.cpp  TimeStampTest.cpp
Tools/: CMakeLists.txt  LARisKa.cpp  LatencyTest.cpp  ManualTrading.cpp  MkHistDataBin_HotSpotFX.cpp  MkSecDefs-Binance.py  MkSecDefs-BitFinex.py  MkSecDefs-BitMEX.py  MkSecDefs-Huobi.py  MkSecDefs-Kraken.py  MkSecDefs-LATOKEN-Old.py  MkSecDefs-LATOKEN.awk  MkSecDefs-LATOKEN.sh  MkSecDefs-LATOKEN.sql  MkSecDefs-LMAX.py  MkSecDefs-OKEX.py  MkSecDefs_FORTS.cpp  MkSecDefs_MICEX.cpp  OptExecProfilePost.cpp  PrintOrdStatus.cpp  StatsMDC.cpp  TradeAnalyzer.cpp  TradeAnalyzer.ini  TradePxsVWAP.cpp
Tools/Configs/: LARisKa.ini  LT-Binance.ini  LT-BitFinex.ini  LT-BitMEX.ini  LT-FTX.ini  LT-Huobi-Fut.ini  LT-Huobi-Spt.ini  LT-Huobi-Swap.ini  MT-AlfaFIX2.ini  MT-Binance.ini  MT-BitFinex.ini  MT-BitMEX.ini  MT-CCMA.ini  MT-Currenex.ini  MT-EBS.ini  MT-FORTS.ini  MT-HSFX.ini  MT-Huobi.ini  MT-LATOKEN.ini  MT-MICEX.ini  MT-NTProgress.ini
Tools/MDRecorders/: CMakeLists.txt  ConvertMDStoreToH5.cpp  ConvertTSDataToMDStore.cpp  ConvertTSDataToVSPDat.cpp  ConvertTXTToMDStore.cpp  ConvertToEdFormat.cpp  ConvertToTS.cpp  MDAnalyzer.cpp  MDRecorder.cpp  MDRecorder_HotSpotFIX.cpp  MDRecorder_HotSpotFIX.ini  PrintMDStore.cpp  PrintMDStoreH5.cpp  PrintVSPBin.cpp  VerifyH5AndRemoveDat.cpp  VerifyH5MDStore.cpp
Tools/UnMaintained/: OPICS_Bridge.cpp
TradingStrats/: CMakeLists.txt
TradingStrats/3Arb/TriArb2S/: CallBacks.hpp  InitRun.hpp  Orders.hpp  TriArb2S.cpp  TriArb2S.h  TriArb2S.ini  WT-TriArb2S.cpp  WT-TriArb2S.sh  WT-TriArb2S.xml
TradingStrats/3Arb/TriArbC0/: CallBacks.hpp  InitRun.hpp  Orders.hpp  QuantLib.hpp  TriArbC0.cpp  TriArbC0.h  TriArbC0.ini  WT-TriArbC0.cpp  WT-TriArbC0.sh
TradingStrats/BLS/BLS-Helix-Selector/: BLS-Helix-Selector.cpp  BLS-Helix-Selector.ini
TradingStrats/BLS/BLS-Multi-Instr/: BLS-Multi-Instr.cpp  BLS-Multi-Instr.ini
TradingStrats/BLS/BLS_serial/: BLS_serial.cpp  BLS_serial.ini
TradingStrats/BLS/Common/: BLSEngine.hpp  BLSParallelEngine.hpp  BLSStrategy.hpp  BLS_Strategies.hpp  MetaSelector.hpp  Params.hpp  TradeStats.hpp  bls_signal.hpp
TradingStrats/MM/MM-NTProgress/: CallBacks.hpp  InitRun.hpp  MM-NTProgress-Config.doc  MM-NTProgress.cpp  MM-NTProgress.h  MM-NTProgress.ini  Orders.hpp  QuantAnalytics.hpp  WT-MM-NTProgress.cpp  WT-MM-NTProgress.sh  WT-MM-NTProgress.xml
TradingStrats/MM/MM-Single/: CallBacks.hpp  InitRun.hpp  MM-Single.cpp  MM-Single.h  MM-Single.ini  MM_Single.sh  Orders.hpp  WT-MM-Single.sh
TradingStrats/MM/MM-Single-ML/: Binance.ini  BitFinex.ini  CallBacks.hpp  InitRun.hpp  MM-Single-ML.cpp  MM-Single-ML.h  MM-Single-ML.sh  Orders.hpp  WT-MM-Single-ML.cpp
TradingStrats/MM/MM-Single-Net/: CallBacks.hpp  InitRun.hpp  MM-Single-Net.cpp  MM-Single-Net.h  MM-Single-Net.sh  Orders.hpp  WT-MM-Single-Net.xml
TradingStrats/Misc/OpeningGap/: OG-FORTS.ini  OpeningGap.cpp
TradingStrats/Misc/Pairs-MF/: CAESAR.ini  CallBacks.hpp  InitRun.hpp  Inverse.ini  Orders.hpp  Pairs-MF.awk  Pairs-MF.cpp  Pairs-MF.h  Pairs-MF.ini  Pairs-MF.sh  WT-CAESAR.sh  WT-CAESAR.xml  WT-Pairs-MF.cpp
UHFTCore/Connectors/: CMakeLists.txt  EConnector.cpp  EConnector.h  EConnector_MktData.cpp  EConnector_MktData.h  EConnector_MktData.hpp  EConnector_OrdMgmt.cpp  EConnector_OrdMgmt.h  EConnector_OrdMgmt.hpp  EConnector_OrdMgmt_Impl.hpp  OrderBook.cpp  OrderBook.h  OrderBook.hpp  SSM_Channel.hpp  SSM_Config.h  SeqNumBuffer.hpp  TCP_Connector.h  TCP_Connector.hpp
UHFTCore/Connectors/FAST/: EConnector_FAST.hpp  EConnector_FAST_FORTS.cpp  EConnector_FAST_FORTS.h  EConnector_FAST_FORTS.hpp  EConnector_FAST_MICEX.cpp  EConnector_FAST_MICEX.hpp  IncrsCh.hpp  SnapShotsCh.hpp
UHFTCore/Connectors/FIX/: Configs.hpp  EConnector_FIX.cpp  EConnector_FIX.h  EConnector_FIX.hpp  FIX_ConnectorSessMgr.h  FIX_ConnectorSessMgr.hpp
UHFTCore/Connectors/H2WS/: Configs.hpp  EConnector_H2WS_MDC.h  EConnector_H2WS_MDC.hpp  EConnector_H2WS_OMC.h  EConnector_H2WS_OMC.hpp  EConnector_WS_MDC.h  EConnector_WS_MDC.hpp  EConnector_WS_OMC.h  EConnector_WS_OMC.hpp  H2Connector.h  H2Connector.hpp  MDMsg.hpp
UHFTCore/Connectors/ITCH/: Configs.h  EConnector_ITCH_HotSpotFX.cpp  EConnector_ITCH_HotSpotFX.h  EConnector_ITCH_HotSpotFX.hpp  EConnector_TCP_ITCH.h  EConnector_TCP_ITCH.hpp
UHFTCore/Connectors/Kafka/: EConnector_LATOKEN_STP-DB.cpp  EConnector_LATOKEN_STP-Init.cpp  EConnector_LATOKEN_STP-Oper.cpp  EConnector_LATOKEN_STP.h
UHFTCore/Connectors/P2CGate/: EConnector_P2CGate_FORTS_MDC.cpp  EConnector_P2CGate_FORTS_MDC.h
UHFTCore/Connectors/TWIME/: Configs.h  EConnector_TWIME_FORTS.cpp  EConnector_TWIME_FORTS.h  Processor.hpp  Sender.cpp
UHFTCore/Connectors/UnMaintained/: CMakeLists.txt  EConnector_MktData.cpp.diff  EConnector_MktData.h.diff  EConnector_MktData.hpp.diff  OrderBook.cpp.diff  OrderBooks.h.diff
UHFTCore/Venues/: CMakeLists.txt
UHFTCore/Venues/AlfaECN/: Accounts_FIX.cpp  Configs_FIX.cpp  Configs_FIX.hpp  Features_FIX.h  SecDefs.cpp  SecDefs.h
UHFTCore/Venues/AlfaFIX2/: Accounts_FIX.cpp  Configs_FIX.cpp  Configs_FIX.hpp  Features_FIX.h  SecDefs.cpp  SecDefs.h
UHFTCore/Venues/Binance/: Configs_H2WS.cpp  Configs_H2WS.h  SecDefs.cpp  SecDefs.h  SecDefs_FutC.cpp  SecDefs_FutT.cpp  SecDefs_Spt.cpp
UHFTCore/Venues/BitFinex/: Configs_WS.cpp  Configs_WS.h  SecDefs.cpp  SecDefs.h
UHFTCore/Venues/BitMEX/: Configs_H2WS.cpp  Configs_H2WS.h  SecDefs.cpp  SecDefs.h
UHFTCore/Venues/Cumberland/: Accounts_FIX.cpp  Configs_FIX.cpp  Configs_FIX.hpp  Features_FIX.h  SecDefs.cpp  SecDefs.h
(+417 files in other folders)
